--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Case Study Site</title>
+  <title>CaseStudyHub</title>
 
-  <!-- Bootstrap CSS CDN -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,6 +25,7 @@
         <li class="nav-item"><a class="nav-link" href="case-studies.html">Case Studies</a></li>
         <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -34,9 +34,9 @@
 <!-- Hero Section -->
 <section class="bg-light py-5 text-center">
   <div class="container">
-    <h1 class="display-4">Welcome to CaseStudyHub</h1>
-    <p class="lead">Explore in-depth case studies and find tools to implement them.</p>
-    <a href="case-studies.html" class="btn btn-primary btn-lg">Explore Case Studies</a>
+    <h1 class="display-4">Explore In-Depth Case Studies</h1>
+    <p class="lead">Learn from real examples and get the tools to implement them.</p>
+    <a href="case-studies.html" class="btn btn-primary btn-lg me-2">View Case Studies</a>
     <a href="products.html" class="btn btn-outline-primary btn-lg">Shop Tools</a>
   </div>
 </section>
@@ -51,7 +51,7 @@
           <img src="images/case1.png" class="card-img-top" alt="Case Study 1">
           <div class="card-body">
             <h5 class="card-title">Case Study 1</h5>
-            <p class="card-text">A short description of this case study goes here.</p>
+            <p class="card-text">Brief description of the first case study.</p>
             <a href="case1.html" class="btn btn-primary">Read More</a>
           </div>
         </div>
@@ -61,18 +61,8 @@
           <img src="images/case2.png" class="card-img-top" alt="Case Study 2">
           <div class="card-body">
             <h5 class="card-title">Case Study 2</h5>
-            <p class="card-text">A short description of this case study goes here.</p>
+            <p class="card-text">Brief description of the second case study.</p>
             <a href="case2.html" class="btn btn-primary">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-          <img src="images/case3.png" class="card-img-top" alt="Case Study 3">
-          <div class="card-body">
-            <h5 class="card-title">Case Study 3</h5>
-            <p class="card-text">A short description of this case study goes here.</p>
-            <a href="case3.html" class="btn btn-primary">Read More</a>
           </div>
         </div>
       </div>
@@ -84,23 +74,22 @@
 <section class="py-5 bg-light text-center">
   <div class="container">
     <h2>Sponsored</h2>
-    <!-- Paste your Google AdSense code here -->
     <div class="border p-3">
-      Your Google AdSense code will go here
+      <!-- Paste your Google AdSense code here -->
+      Your Google Ad will appear here
     </div>
   </div>
 </section>
 
 <!-- Featured Product -->
 <section class="py-5">
-  <div class="container">
+  <div class="container text-center">
     <h2 class="mb-4">Featured Tool</h2>
-    <div class="card mb-4 shadow-sm" style="max-width: 400px; margin: auto;">
+    <div class="card mx-auto shadow-sm" style="max-width: 400px;">
       <img src="images/product1.jpg" class="card-img-top" alt="Tool">
-      <div class="card-body text-center">
+      <div class="card-body">
         <h5 class="card-title">Tool Name</h5>
-        <p class="card-text">Brief description of your tool/product.</p>
-        <!-- Sample PayPal Button -->
+        <p class="card-text">Brief description of your tool or product.</p>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="YOUR_BUTTON_ID">
